--- a/ZeldaWebsite/Views/Home/Flavour.cshtml
+++ b/ZeldaWebsite/Views/Home/Flavour.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ZeldaWebsite.Models.Flavour
 @{
-	ViewData["Title"] = Html.DisplayNameFor(model => model.Name);
+	ViewData["Title"] = Html.DisplayFor(model => model.Name);
 	Layout = "~/Views/Shared/ProjectLayout.cshtml";
 }
 
